--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -52,11 +52,21 @@
 
 				<section>
 					<section>
-						<h3>Community</h3>
+						<h3>Community and users</h3>
 						<p class="fragment"><span style="color:#17ff2e">~1100</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-user/">semediawiki-user</a></p>
 						<p class="fragment"><span style="color:#17ff2e">~100</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-devel/">semediawiki-devel</a></p>
 						<p class="fragment"><span style="color:#17ff2e">~5500</span> edits and <span style="color:#17ff2e">~1300</span> new pages on <a href="https://semantic-mediawiki.org/">semantic-mediawiki.org</a></p>
-						<p class="fragment"><span style="color:#17ff2e">~200</span> tickets on GitHub</p>
+						<p class="fragment"><span style="color:#17ff2e">~200</span> tickets on GitHub including ~50 bug reports and ~30 feature requests</p>
+					</section>
+
+					<section>
+						<h3>Community and users cont.</h3>
+						<p class="fragment"><span style="color:#17ff2e">~670</span> watchers of <a href="https://vimeo.com/82255034">installation video on Vimeo (finishes, past 12 months)</a></p>
+						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">~580</span> last year</p>
+						<p class="fragment">
+							<span style="color:#17ff2e">~1600</span> installs from <a href="https://packagist.org/packages/mediawiki/semantic-media-wiki/stats">Packagist per month</a>
+							<img src="img/packagist_graph.png" alt="Pagagist all time">
+						</p>
 					</section>
 
 					<section>
@@ -66,12 +76,49 @@
 
 						<p class="fragment">
 							<span style="color:#17ff2e">~1500</span> code changes
-							<img src="img/commit_graph.jpg" alt="Y U NO LOAD">
+							<img src="img/commit_graph.jpg" alt="Commits 2015/2016">
 						</p>
 
 						<aside class="notes">
-							Same amount of changes and devs as last 2 year
+							Same amount of changes and devs as during the last 2 years
 						</aside>
+					</section>
+
+					<section>
+						<h3>Codebase cont.</h3>
+
+						<p><span style="color:#17ff2e">8.39 (good)</span> Scrutinizer, <a href="https://scrutinizer-ci.com/g/SemanticMediaWiki/SemanticMediaWiki/">code quality assessment</a></p>
+						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">8.24 (good)</span> last year</p>
+						<p class="fragment">
+							<img src="img/scrutizizer_2015graph.png" alt="Scrutinizer 2014/2015">&emsp;
+							<img src="img/scrutizizer_2016graph.png" alt="Scrutinizer 2015/2016">
+						</p>
+					</section>
+
+					<section>
+						<h3>Codebase cont.</h3>
+
+						<p><span style="color:#17ff2e">SMW 2.5-alpha</span> <a href="https://github.com/SemanticMediaWiki/SemanticMediaWiki/issues/107">4032 integration tests</a></p>
+						<p><span style="color:#17ff2e">SMW 2.4</span> 3685 integration tests</a></p>
+						<p><span style="color:#17ff2e">SMW 2.3</span> 3113 integration tests</a></p>
+						<p><span style="color:#17ff2e">SMW 2.2</span> 3014 integration tests</a></p>
+						<p><span style="color:#17ff2e">SMW 2.1</span> 2966 integration tests</a></p>
+						<p><span style="color:#17ff2e">SMW 2.0</span> 2316 integration tests</a></p>
+
+						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">3113</span> last year</p>
+						<p class="fragment">
+							<img src="img/tests_graph.png" alt="Travis integration tests">
+						</p>
+					</section>
+
+					<section>
+						<h3>Codebase cont.</h3>
+
+						<p><span style="color:#17ff2e">a lot of environments get tested</span></p>
+					
+						<p class="fragment">
+							<img src="img/tests_pic.png" alt="Travis integration tests">
+						</p>
 					</section>
 
 					<section>
