--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -57,14 +57,15 @@
 						<p class="fragment"><span style="color:#17ff2e">~100</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-devel/">semediawiki-devel</a></p>
 						<p class="fragment"><span style="color:#17ff2e">~5500</span> edits and <span style="color:#17ff2e">~1300</span> new pages on <a href="https://semantic-mediawiki.org/">semantic-mediawiki.org</a></p>
 						<p class="fragment"><span style="color:#17ff2e">~200</span> tickets on GitHub including ~50 bug reports and ~30 feature requests</p>
+						<p class="fragment">including <span style="color:#17ff2e">~50</span> reports and <span style="color:#17ff2e">~30</span> feature requests</p>
 					</section>
 
 					<section>
 						<h3>Community and users cont.</h3>
-						<p class="fragment"><span style="color:#17ff2e">~670</span> watchers of <a href="https://vimeo.com/82255034">installation video on Vimeo (finishes, past 12 months)</a></p>
+						<p class="fragment"><span style="color:#17ff2e">~670</span> watchers of <a href="https://vimeo.com/82255034">installation video on Vimeo</a><br />(finishes, past 12 months)</p>
 						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">~580</span> last year</p>
 						<p class="fragment">
-							<span style="color:#17ff2e">~1600</span> installs from <a href="https://packagist.org/packages/mediawiki/semantic-media-wiki/stats">Packagist per month</a>
+							<span style="color:#17ff2e">~1600</span> installs from <a href="https://packagist.org/packages/mediawiki/semantic-media-wiki/stats">Packagist</a> per month
 							<img src="img/packagist_graph.png" alt="Pagagist all time">
 						</p>
 					</section>
@@ -98,17 +99,15 @@
 					<section>
 						<h3>Codebase cont.</h3>
 
-						<p><span style="color:#17ff2e">SMW 2.5-alpha</span> <a href="https://github.com/SemanticMediaWiki/SemanticMediaWiki/issues/107">4032 integration tests</a></p>
-						<p><span style="color:#17ff2e">SMW 2.4</span> 3685 integration tests</a></p>
-						<p><span style="color:#17ff2e">SMW 2.3</span> 3113 integration tests</a></p>
-						<p><span style="color:#17ff2e">SMW 2.2</span> 3014 integration tests</a></p>
-						<p><span style="color:#17ff2e">SMW 2.1</span> 2966 integration tests</a></p>
-						<p><span style="color:#17ff2e">SMW 2.0</span> 2316 integration tests</a></p>
-
-						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">3113</span> last year</p>
-						<p class="fragment">
-							<img src="img/tests_graph.png" alt="Travis integration tests">
+						<p><span style="color:#17ff2e">SMW 2.5-alpha</span> <a href="https://github.com/SemanticMediaWiki/SemanticMediaWiki/issues/107">– 4032</a> integration tests</p>
+						<p class="fragment"><span style="color:#17ff2e">SMW 2.4</span> – 3685 integration tests</a><br /><br />
+							<span style="color:#17ff2e">SMW 2.3</span> – 3113 integration tests</a><br /><br />
+							<span style="color:#17ff2e">SMW 2.2</span> – 3014 integration tests</a><br /><br />
+							<span style="color:#17ff2e">SMW 2.1</span> – 2966 integration tests</a><br /><br />
+							<span style="color:#17ff2e">SMW 2.0</span> – 2316 integration tests</a>
 						</p>
+
+						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">3113</span> last year (SMW 2.3)</p>
 					</section>
 
 					<section>
