--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -223,7 +223,7 @@
 
 						<ul>
 							<li class="fragment" style="font-size: 90%">Support for text storage in multiple languages using the new monolingual text datatype using @languagecode</li>
-							<li class="fragment" style="font-size: 90%">Provide a methods to describe a property in multiple languages using @languagecode</li>
+							<li class="fragment" style="font-size: 90%">Provides methods to describe a property in multiple languages using @languagecode</li>
 						</ul>
 
 						<p class="fragment">
@@ -237,7 +237,7 @@
 
 						<ul>
 							<li class="fragment" style="font-size: 90%">Adaptive formatting for Number, Boolean and Date values using the #LOCL formatter</li>
-							<li class="fragment" style="font-size: 90%">Recognize page content language to aid value parsing (supported by the Semantic Interlanguage Extension)</li>
+							<li class="fragment" style="font-size: 90%">Recognize page content language to improve value parsing (supported by the Semantic Interlanguage Extension)</li>
 						</ul>
 					</section>
 
@@ -251,10 +251,14 @@
 							<p class="fragment">Support for uniqueness and pattern based (regular expressions) property value constraints<br />
 								<img src="img/oopsvalue.png" alt="Erroneous value assignment">
 							</p>
+					</section>
+
+					<section>
+						<h3><span style="color: #17ff2e">Various other features cont.</span></h3>
 
 							<p class="fragment">Support for DISPLAYTITLE via a queryable special property</p>
 
-						<p class="fragment">Improved handling of outdated entities ("rebuildData.php" --shallow-update option)</p>
+							<p class="fragment">Improved handling of outdated entities<br />("rebuildData.php" --shallow-update option)</p>
 					</section>
 
 					<section>
@@ -307,8 +311,8 @@
 						<h3><span class="shadow">New features in SMW 2.5</span></h3>
 
 						<ul>
-							<li class="fragment">Support for MySQL and SQLite's “native” full-text search on text and uri typed values including phrase matching</li>
-							<li class="fragment">Reference statements to record provenance metadata on individual value annotations<br />(record like: value - data - source)<br />
+							<li class="fragment">Support for MySQL and SQLite's “native” full-text search on text and URI typed values including phrase matching</li>
+							<li class="fragment">Reference typed statements to record provenance metadata on individual value annotations<br />(record like: value - data - source)<br />
 								<img src="img/referencedstatements.png" alt="Referenced statements in action">
 							</li>
 						</ul>
@@ -340,7 +344,7 @@
 					<section data-background="#006060">
 						<h3><span class="shadow">New features in SMW 3.0</span></h3>
 
-						<p>Currently only internal changes are planned though much more to be expected.</p>
+						<p>Currently only internal changes are planned though much more is to be expected.</p>
 					</section>
 				</section>
 
