Removed random closing tags

--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -97,11 +97,11 @@
 						<h3>Codebase cont.</h3>
 
 						<p><span style="color:#17ff2e">SMW 2.5-alpha</span> – <a href="https://github.com/SemanticMediaWiki/SemanticMediaWiki/issues/107">4032</a> integration tests</p>
-						<p class="fragment"><span style="color:#17ff2e">SMW 2.4</span> – 3685 integration tests</a><br />
-							<span style="color:#17ff2e">SMW 2.3</span> – 3113 integration tests</a><br />
-							<span style="color:#17ff2e">SMW 2.2</span> – 3014 integration tests</a><br />
-							<span style="color:#17ff2e">SMW 2.1</span> – 2966 integration tests</a><br />
-							<span style="color:#17ff2e">SMW 2.0</span> – 2316 integration tests</a>
+						<p class="fragment"><span style="color:#17ff2e">SMW 2.4</span> – 3685 integration tests<br />
+							<span style="color:#17ff2e">SMW 2.3</span> – 3113 integration tests<br />
+							<span style="color:#17ff2e">SMW 2.2</span> – 3014 integration tests<br />
+							<span style="color:#17ff2e">SMW 2.1</span> – 2966 integration tests<br />
+							<span style="color:#17ff2e">SMW 2.0</span> – 2316 integration tests
 						</p>
 
 						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">3113</span> last year (SMW 2.3)</p>
