--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -53,8 +53,6 @@
 						<p class="fragment"><span style="color:#17ff2e">~1100</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-user/">semediawiki-user</a></p>
 						<p class="fragment"><span style="color:#17ff2e">~100</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-devel/">semediawiki-devel</a></p>
 						<p class="fragment"><span style="color:#17ff2e">~5500</span> edits and <span style="color:#17ff2e">~1300</span> new pages on <a href="https://semantic-mediawiki.org/">semantic-mediawiki.org</a></p>
-						<p class="fragment"><span style="color:#17ff2e">~200</span> tickets on GitHub</p>
-						<p class="fragment">including <span style="color:#b9ffc0">~50</span> bug reports and <span style="color:#b9ffc0">~30</span> feature requests</p>
 					</section>
 
 					<section>
@@ -97,11 +95,9 @@
 						<h3>Codebase cont.</h3>
 
 						<p><span style="color:#17ff2e">SMW 2.5-alpha</span> – <a href="https://github.com/SemanticMediaWiki/SemanticMediaWiki/issues/107">4032</a> integration tests</p>
-						<p class="fragment"><span style="color:#17ff2e">SMW 2.4</span> – 3685 integration tests<br />
-							<span style="color:#17ff2e">SMW 2.3</span> – 3113 integration tests<br />
-							<span style="color:#17ff2e">SMW 2.2</span> – 3014 integration tests<br />
-							<span style="color:#17ff2e">SMW 2.1</span> – 2966 integration tests<br />
-							<span style="color:#17ff2e">SMW 2.0</span> – 2316 integration tests
+						<p class="fragment"><span style="color:#17ff2e">SMW 2.4</span> – 3685 integration tests</a></p>
+						<p class="fragment">
+							<img src="img/tests_graph.png" alt="Tests 2015/2016">
 						</p>
 
 						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">3113</span> last year (SMW 2.3)</p>
@@ -184,14 +180,6 @@
 							Smaller font than last year :)
 						</aside>
 					</section>
-				</section>
-
-				<section>
-					<h3>Information about and new features in SMW 2.4</h3>
-
-					<p class="fragment">Let's start cycling through the yet invisible infos and features<br />
-						<img class="fragment" src="img/cyclekittie.jpg" alt="Cat on an invisible bike">
-					</p>
 				</section>
 
 				<section data-background="#005555">
@@ -294,7 +282,7 @@
 									<li class="fragment" style="font-size: 90%">--ignore-exceptions</li>
 									<li class="fragment" style="font-size: 90%">--exception-log="/path/to/smw/logs/directory/"</li>
 									<li class="fragment" style="font-size: 90%">--with-maintenance-log</li>
-									<li class="fragment" style="font-size: 90%"> --redirects</li>
+									<li class="fragment" style="font-size: 90%">--redirects</li>
 								</ul>
 							</p>
 					</section>
